@@ -1,5 +1,9 @@
 package com.sstlfsj.fibra.runtime.node;
 
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 
 public record NodeEndpointManifest(String name, String kind, int schemaVersion,
@@ -17,6 +21,20 @@ public record NodeEndpointManifest(String name, String kind, int schemaVersion,
         if (method == null || method.isBlank()) {
             throw new IllegalArgumentException("endpoint method must not be blank");
         }
-        descriptor = descriptor == null ? Map.of() : descriptor;
+        descriptor = descriptor == null ? Map.of() : freeze(descriptor);
+    }
+
+    private static Object freeze(Object value) {
+        if (value instanceof Map<?, ?> values) {
+            var result = new LinkedHashMap<Object, Object>();
+            values.forEach((key, entry) -> result.put(key, freeze(entry)));
+            return Collections.unmodifiableMap(result);
+        }
+        if (value instanceof List<?> values) {
+            var result = new ArrayList<Object>(values.size());
+            values.forEach(entry -> result.add(freeze(entry)));
+            return List.copyOf(result);
+        }
+        return value;
     }
 }
